<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MobileClassOne</string>
    <string name="action_settings">Settings</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellidos</string>
    <string name="age">Edad</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="title_activity_name">NameActivity</string>
    <string name="hello_world">Maria de Jesus</string>
    <string name="title_activity_surname">SurnameActivity</string>
    <string name="title_activity_age">AgeActivity</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="btnHome">Inicio</string>
    <color name="bgColor">#ad0034ff</color>
    <color name="fontColor">#ffffff</color>
    <color name="Red">#ffff3015</color>
    <color name="Green">#ff2dff06</color>
    <color name="Blue">#ff4cfaff</color>
    <string name="btnNext">Next</string>

</resources>
